// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The App renders and sends PUT for top-level moves 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -113,11 +113,11 @@
              />
            </svg>
            <span
              class=\\"item-text-container\\"
            >
-             beta
+             alpha
            </span>
            <span
              class=\\"item-icon-container\\"
            >
              <img
@@ -163,11 +163,11 @@
              />
            </svg>
            <span
              class=\\"item-text-container\\"
            >
-             alpha
+             beta
            </span>
            <span
              class=\\"item-icon-container\\"
            >
              <img"
`;

exports[`The App renders with anonymous user 1`] = `
<DocumentFragment>
  <header>
    <nav
      class="navbar navbar-expand-md navbar-dark bg-dark"
    >
      <a
        class="navbar-brand"
        href="/"
      >
        <img
          alt="List palette logo"
          class="mr-2"
          height="48"
          src="logo192.svg"
        />
        List Palette
      </a>
      <button
        aria-controls="navbarCollapse"
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="navbar-toggler"
        data-target="#navbarCollapse"
        data-toggle="collapse"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbarCollapse"
      >
        <ul
          class="navbar-nav mr-auto"
        >
          <li
            class="nav-item"
          >
            <button
              class="nav-link"
            >
              Help
            </button>
          </li>
        </ul>
        <button
          class="btn btn-success mx-1 my-2 my-sm-0"
        >
          Sign in
        </button>
        <button
          class="btn btn-outline-success my-2 my-sm-0"
        >
          Sign up
        </button>
      </div>
    </nav>
  </header>
  <div
    class="container"
  >
    <div
      class="location"
    >
      <button
        class="location-button"
      >
        Home&gt;
      </button>
    </div>
    <div
      class="form"
    >
      <input
        data-testid="add-item-input"
        type="text"
        value=""
      />
      <button>
        <span
          class="add-span"
        >
          Add
        </span>
      </button>
    </div>
    <div
      class="list"
    >
      <div
        class="item"
        draggable="true"
      >
        <div
          class="item-first-line"
        >
          <svg
            class="item-icon-container bi bi-caret-right-fill"
            fill="currentColor"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span
            class="item-text-container"
          >
            People
          </span>
          <span
            class="item-icon-container"
          >
            <img
              alt="merge icon"
              class="icon"
              src="/icons/merge-icon.svg"
            />
            <img
              alt="focus icon"
              class="icon"
              src="/icons/focus-icon.svg"
            />
            <img
              alt="edit icon"
              class="icon"
              src="/icons/edit-icon.svg"
            />
            <img
              alt="delete icon"
              class="icon"
              src="/icons/delete-icon.svg"
            />
          </span>
        </div>
      </div>
      <div
        class="item"
        draggable="true"
      >
        <div
          class="item-first-line"
        >
          <svg
            class="item-icon-container bi bi-caret-right-fill"
            fill="currentColor"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span
            class="item-text-container"
          >
            To-do
          </span>
          <span
            class="item-icon-container"
          >
            <img
              alt="merge icon"
              class="icon"
              src="/icons/merge-icon.svg"
            />
            <img
              alt="focus icon"
              class="icon"
              src="/icons/focus-icon.svg"
            />
            <img
              alt="edit icon"
              class="icon"
              src="/icons/edit-icon.svg"
            />
            <img
              alt="delete icon"
              class="icon"
              src="/icons/delete-icon.svg"
            />
          </span>
        </div>
      </div>
      <div
        class="item"
        draggable="true"
      >
        <div
          class="item-first-line"
        >
          <svg
            class="item-icon-container bi bi-caret-right-fill"
            fill="currentColor"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span
            class="item-text-container"
          >
            Groceries
          </span>
          <span
            class="item-icon-container"
          >
            <img
              alt="merge icon"
              class="icon"
              src="/icons/merge-icon.svg"
            />
            <img
              alt="focus icon"
              class="icon"
              src="/icons/focus-icon.svg"
            />
            <img
              alt="edit icon"
              class="icon"
              src="/icons/edit-icon.svg"
            />
            <img
              alt="delete icon"
              class="icon"
              src="/icons/delete-icon.svg"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`The App renders with signed-in user 1`] = `
<DocumentFragment>
  <header>
    <nav
      class="navbar navbar-expand-md navbar-dark bg-dark"
    >
      <a
        class="navbar-brand"
        href="/"
      >
        <img
          alt="List palette logo"
          class="mr-2"
          height="48"
          src="logo192.svg"
        />
        List Palette
      </a>
      <button
        aria-controls="navbarCollapse"
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="navbar-toggler"
        data-target="#navbarCollapse"
        data-toggle="collapse"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbarCollapse"
      >
        <ul
          class="navbar-nav mr-auto"
        >
          <li
            class="nav-item"
          >
            <button
              class="nav-link"
            >
              Help
            </button>
          </li>
        </ul>
        <div
          class="navbar-nav"
        >
          <button
            class="nav-link mr-1"
          >
            John
          </button>
          <button
            class="btn btn-secondary my-2 my-sm-0"
          >
            Sign out
          </button>
        </div>
      </div>
    </nav>
  </header>
  <div
    class="container"
  >
    <div
      class="location"
    >
      <button
        class="location-button"
      >
        Home&gt;
      </button>
    </div>
    <div
      class="form"
    >
      <input
        data-testid="add-item-input"
        type="text"
        value=""
      />
      <button>
        <span
          class="add-span"
        >
          Add
        </span>
      </button>
    </div>
    <div
      class="list"
    >
      <div
        class="item"
        draggable="true"
      >
        <div
          class="item-first-line"
        >
          <svg
            class="item-icon-container bi bi-caret-right-fill"
            fill="currentColor"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span
            class="item-text-container"
          >
            People
          </span>
          <span
            class="item-icon-container"
          >
            <img
              alt="merge icon"
              class="icon"
              src="/icons/merge-icon.svg"
            />
            <img
              alt="focus icon"
              class="icon"
              src="/icons/focus-icon.svg"
            />
            <img
              alt="edit icon"
              class="icon"
              src="/icons/edit-icon.svg"
            />
            <img
              alt="delete icon"
              class="icon"
              src="/icons/delete-icon.svg"
            />
          </span>
        </div>
      </div>
      <div
        class="item"
        draggable="true"
      >
        <div
          class="item-first-line"
        >
          <svg
            class="item-icon-container bi bi-caret-right-fill"
            fill="currentColor"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span
            class="item-text-container"
          >
            To-do
          </span>
          <span
            class="item-icon-container"
          >
            <img
              alt="merge icon"
              class="icon"
              src="/icons/merge-icon.svg"
            />
            <img
              alt="focus icon"
              class="icon"
              src="/icons/focus-icon.svg"
            />
            <img
              alt="edit icon"
              class="icon"
              src="/icons/edit-icon.svg"
            />
            <img
              alt="delete icon"
              class="icon"
              src="/icons/delete-icon.svg"
            />
          </span>
        </div>
      </div>
      <div
        class="item"
        draggable="true"
      >
        <div
          class="item-first-line"
        >
          <svg
            class="item-icon-container bi bi-caret-right-fill"
            fill="currentColor"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span
            class="item-text-container"
          >
            Groceries
          </span>
          <span
            class="item-icon-container"
          >
            <img
              alt="merge icon"
              class="icon"
              src="/icons/merge-icon.svg"
            />
            <img
              alt="focus icon"
              class="icon"
              src="/icons/focus-icon.svg"
            />
            <img
              alt="edit icon"
              class="icon"
              src="/icons/edit-icon.svg"
            />
            <img
              alt="delete icon"
              class="icon"
              src="/icons/delete-icon.svg"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
